@@ -424,15 +424,14 @@ public class ArcaneSpellHandler {
             int newHp = target.getHpCurrent();
             
             // Damage message
-            ClientHandler.broadcastRoomMessage(casterRoom, 
-                String.format("The heaving earth strikes %s for %d damage!", targetName, damage));
+            ClientHandler.broadcastRoomMessage(casterRoom,
+                "The heaving earth strikes %s for %d damage!".formatted(targetName, damage));
             
             // Notify target if player
             if (target.isPlayer() && targetCharId != null) {
                 ClientHandler targetHandler = ClientHandler.charIdToSession.get(targetCharId);
                 if (targetHandler != null) {
-                    targetHandler.out.println(String.format(
-                        "\u001B[31mThe earthquake deals %d damage to you! [%d -> %d HP]\u001B[0m", 
+                    targetHandler.out.println("\u001B[31mThe earthquake deals %d damage to you! [%d -> %d HP]\u001B[0m".formatted(
                         damage, oldHp, newHp));
                 }
             }
@@ -560,8 +559,8 @@ public class ArcaneSpellHandler {
             
             // Room message for casting
             String missileWord = numMissiles == 1 ? "missile" : "missiles";
-            ClientHandler.broadcastRoomMessage(casterRoom, 
-                String.format("%s hurls %d glowing %s of magical energy at %s!", 
+            ClientHandler.broadcastRoomMessage(casterRoom,
+                "%s hurls %d glowing %s of magical energy at %s!".formatted(
                     casterName, numMissiles, missileWord, targetName));
             
             // Apply damage through combat system if in combat
@@ -572,15 +571,14 @@ public class ArcaneSpellHandler {
                     targetCombatant.damage(totalDamage);
                     int newHp = targetCombatant.getHpCurrent();
                     
-                    ClientHandler.broadcastRoomMessage(casterRoom, 
-                        String.format("The missiles strike %s for %d damage!", targetName, totalDamage));
+                    ClientHandler.broadcastRoomMessage(casterRoom,
+                        "The missiles strike %s for %d damage!".formatted(targetName, totalDamage));
                     
                     // Notify target if player
                     if (targetCombatant.isPlayer()) {
                         ClientHandler targetHandler = ClientHandler.charIdToSession.get(targetId);
                         if (targetHandler != null) {
-                            targetHandler.out.println(String.format(
-                                "\u001B[31mMagic missiles deal %d damage to you! [%d -> %d HP]\u001B[0m", 
+                            targetHandler.out.println("\u001B[31mMagic missiles deal %d damage to you! [%d -> %d HP]\u001B[0m".formatted(
                                 totalDamage, oldHp, newHp));
                         }
                     }
@@ -597,8 +595,8 @@ public class ArcaneSpellHandler {
                 }
             } else {
                 // Outside combat - just show message (damage not applied without combat system)
-                ClientHandler.broadcastRoomMessage(casterRoom, 
-                    String.format("The missiles strike %s for %d damage!", targetName, totalDamage));
+                ClientHandler.broadcastRoomMessage(casterRoom,
+                    "The missiles strike %s for %d damage!".formatted(targetName, totalDamage));
                 anyHit = true;
             }
         }
